BaseForm.java 　- セッションが復元する際にmgs、errsがnullになる不具合を修正（テスト追加） その他 　- FindBugsで怒られるところを修正
git-svn-id: https://dev.rough-diamond.jp/svn/framework/framework/trunk/framework@118 32b2b61f-7f20-47f8-a8dc-572efa4bece0